ZyboBaseProject/ZyboBaseProject.sdk/.metadata/.plugins/org.eclipse.cdt.ui/AXI_Slave_Test_Bench_4.build.log
00:02:31 **** Auto Build of configuration Debug for project AXI_Slave_Test_Bench_4 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.cpp'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function 'int main()':
../src/main.cpp:20:2: error: 'init_platform' was not declared in this scope
  init_platform();
  ^~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/main.o] Error 1

00:02:31 Build Finished (took 226ms)

